--- a/css/style.scss
+++ b/css/style.scss
@@ -76,8 +76,102 @@ margin: 0;
   margin: 6px 0;
 }
 
-// @media only screen and (min-width: 768px) {
-.close {
-  color: red;
-  display: none;
+@media only screen and (min-width: 768px) {
+  .close {
+    color: red;
+    display: none;
+  }
+
+  .menu {
+    // flex-direction: column;
+    // z-index: 1;
+    // // position: absolute;
+    // position: fixed;
+    // @include media(tablet) {
+    //     display: flex;
+    //     flex-direction: row;
+    //     justify-content: center;
+    //     position: relative;
+    // }
+    display: flex;
+  }
+  .sidenav {
+    width: 100%;
+    left: 0;
+  }
+  #closeBtn {
+    display: none;
+  }
+}
+nav ul {
+  list-style-type: none;
+}
+
+// nav li {
+//   float: left;
+//   width: 20%;
+//   text-align: center;
+// }
+
+// nav ul::after {
+//   content: "";
+//   display: table;
+//   clear: both;
+// }
+
+// nav a {
+//   display: block;
+//   text-decoration: none;
+//   color: black;
+//   border-bottom: 2px solid transparent;
+//   padding: 10px 0px;
+// }
+
+nav {
+  width: 100%;
+  margin: 0 auto;
+  background-color: white;
+  position: sticky;
+  top: 0px;
+  font-size: 120%;
+}
+
+nav a:hover {
+  color: orange;
+  border-bottom: 2px solid gold;
+}
+
+// .sous {
+//   display: none;
+//   box-shadow: 0px 1px 2px #ccc;
+//   background-color: white;
+//   position: absolute;
+//   width: 100%;
+//   z-index: 1000;
+// }
+
+nav > ul li:hover .sous {
+  display: block;
+  width: 25%;
+  text-align: center;
+  position: relative;
+}
+.sous li {
+  float: none;
+  width: 100%;
+  text-align: left;
+}
+
+.sous a {
+  padding: 10px;
+}
+
+.sous a:hover {
+  border-bottom: none;
+  background-color: rgba(200, 200, 200, 0.1);
+}
+
+.deroulant > a::after {
+  content: "";
+  font-size: 12px;
 }
