ajout space around au flex

--- a/css/style.scss
+++ b/css/style.scss
@@ -94,6 +94,7 @@ margin: 0;
     //     position: relative;
     // }
     display: flex;
+    justify-content: space-around;
   }
   .sidenav {
     width: 100%;
