--- a/css/style.scss
+++ b/css/style.scss
@@ -4,14 +4,24 @@ body {
 
 .sidenav {
   // height: 100%;
-  width: 170px;
+  //   width: 170px;
+  //   position: fixed;
+  //   z-index: 1;
+  //   top: 0;
+  //   left: -170px;
+  //   background-color: #e8e8e8;
+  //   padding-top: 60px;
+  //   transition: left 0.5s ease;
+  /* height: 500px; */
+  width: 100%;
   position: fixed;
   z-index: 1;
   top: 0;
-  left: -170px;
-  background-color: #e8e8e8;
+  top: -500px;
+  /* left: -170px; */
+  //   background-color: #e8e8e8;
   padding-top: 60px;
-  transition: left 0.5s ease;
+  transition: top 0.5s ease;
 }
 
 /* Sidenav menu links */
@@ -52,7 +62,8 @@ margin: 0;
 
 /* Active class */
 .sidenav.active {
-  left: 0;
+  //   left: 0;
+  top: 0;
 }
 
 /* Close btn */
@@ -74,6 +85,9 @@ margin: 0;
   height: 5px;
   background-color: black;
   margin: 6px 0;
+  @media only screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 768px) {
