--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@ body {
 
 @media only screen and (max-width: 767px) {
   .sidenav {
+    height: 240px;
     width: 170px;
     position: fixed;
     z-index: 1;
     top: 0;
-    left: -170px;
-    background-color: #e8e8e8;
+    top: -300px;
     padding-top: 60px;
-    transition: left 0.5s ease;
+    transition: top 0.5s ease;
   }
   /* Sidenav menu links */
   .sidenav a {
@@ -45,16 +45,19 @@ body {
   }
   /* Active class */
   .sidenav.active {
-    left: 0;
+    top: 0;
   }
   /* Close btn */
   .sidenav .close {
     position: absolute;
-    top: 0;
+    top: -20px;
+    left: -30px;
+    margin-left: auto;
     font-size: 56px;
-    right: 10px;
-    color: #e26a8d;
+    color: black;
     font-weight: 900;
+    background-color: white;
+    height: 46px;
   }
   /* Icône burger */
   .burger-icon span {
