--- a/css/style.scss
+++ b/css/style.scss
@@ -196,14 +196,26 @@ body {
   // @media screen and (min-width: 200px) and (max-width: 748px) {
   .sidenav {
     // height: 100%;
+    // width: 170px;
+    // position: fixed;
+    // z-index: 1;
+    // top: 0;
+    // left: -170px;
+    // background-color: #e8e8e8;
+    // padding-top: 60px;
+    // transition: left 0.5s ease;
+
+    height: 240px;
     width: 170px;
     position: fixed;
     z-index: 1;
     top: 0;
-    left: -170px;
-    background-color: #e8e8e8;
+    // left: -170px;
+    top: -300px;
+
+    // background-color: #e8e8e8;
     padding-top: 60px;
-    transition: left 0.5s ease;
+    transition: top 0.5s ease;
   }
 
   /* Sidenav menu links */
@@ -244,19 +256,29 @@ margin: 0;
 
   /* Active class */
   .sidenav.active {
-    left: 0;
+    // left: 0;
+    top: 0;
   }
 
   /* Close btn */
   .sidenav .close {
+    // position: absolute;
+    // top: 0;
+    // // right: 25px;
+    // // font-size: 36px;
+    // font-size: 56px;
+    // right: 10px;
+    // color: #e26a8d;
+    // font-weight: 900;
     position: absolute;
-    top: 0;
-    // right: 25px;
-    // font-size: 36px;
+    top: -20px;
+    left: -30px;
+    margin-left: auto;
     font-size: 56px;
-    right: 10px;
-    color: #e26a8d;
+    color: black;
     font-weight: 900;
+    background-color: white;
+    height: 46px;
   }
 
   /* Icône burger */
