--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,139 @@
 @charset "UTF-8";
+* {
+  /* remember to define focus styles! */
+  /* tables still need 'cellspacing="0"' in the markup */
+}
+* html,
+* body,
+* div,
+* span,
+* applet,
+* object,
+* iframe,
+* h1,
+* h2,
+* h3,
+* h4,
+* h5,
+* h6,
+* p,
+* blockquote,
+* pre,
+* a,
+* abbr,
+* acronym,
+* address,
+* big,
+* cite,
+* code,
+* del,
+* dfn,
+* em,
+* font,
+* img,
+* ins,
+* kbd,
+* q,
+* s,
+* samp,
+* small,
+* strike,
+* strong,
+* sub,
+* sup,
+* tt,
+* var,
+* dl,
+* dt,
+* dd,
+* ol,
+* ul,
+* li,
+* fieldset,
+* form,
+* label,
+* legend,
+* table,
+* caption,
+* tbody,
+* tfoot,
+* thead,
+* tr,
+* th,
+* td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
+}
+* :focus {
+  outline: 0;
+}
+* body {
+  line-height: 1;
+  color: black;
+  background: white;
+}
+* ol,
+* ul {
+  list-style: none;
+}
+* table {
+  border-collapse: separate;
+  border-spacing: 0;
+}
+* caption,
+* th,
+* td {
+  text-align: left;
+  font-weight: normal;
+}
+* blockquote:before,
+* blockquote:after,
+* q:before,
+* q:after {
+  content: "";
+}
+* blockquote,
+* q {
+  quotes: "" "";
+}
+
 body {
   background-color: beige;
+}
+
+body {
+  display: grid;
+  grid-template-areas: " header " "main " " footer ";
+  font-family: "Times New Roman", Times, serif;
+  row-gap: 20px;
+  grid-template-rows: 10rem auto 2rem;
+  grid-template-columns: auto;
+  height: 100vh;
+}
+@media screen and (min-width: 768px) {
+  body {
+    grid-template-columns: auto 1240px auto;
+    grid-template-areas: ". header ." ". main ." ". footer .";
+  }
+}
+
+header {
+  grid-area: header;
+}
+
+main {
+  grid-area: main;
+}
+
+footer {
+  grid-area: footer;
 }
 
 @media only screen and (max-width: 767px) {
