--- a/css/style.scss
+++ b/css/style.scss
@@ -359,6 +359,8 @@ margin: 0;
 .menu a {
   display: flex;
   width: 165px;
+  // width: 250px;
+
   height: 35px;
   // line-height: 35px;
   color: black;
@@ -375,12 +377,17 @@ margin: 0;
   // padding: 0px 7px;
   justify-content: center;
   text-align: center;
+  &:hover {
+    background-color: #0069b5;
+  }
   @include media(tablet) {
     width: 100%;
   }
 
   &:hover {
-    background-color: #5aabdf;
+    // background-color: #5aabdf;
+    // background-color: (44, 51, 147, 255);
+    background-color: #0069b5;
   }
 }
 //ciblage uniquement des liens dans les sous menus
@@ -399,11 +406,12 @@ margin: 0;
   // margin: 0px 15px;
   // position: relative;
   // display: none;
-  margin: 3px;
+  // margin: 3px;
   width: 100%;
-  // @include media(tablet) {
-  //     display: block;
-  // }
+  @include media(tablet) {
+    //     display: block;
+    margin: 3px;
+  }
 }
 
 // @media only screen and (min-width: 768px) {
@@ -418,8 +426,12 @@ margin: 0;
 // }
 // }
 .menu > li {
+  // display: flex;
+  // position: relative;
   display: flex;
   position: relative;
+  justify-content: center;
+  align-items: center;
 }
 
 //effet et layout du menu au survol
@@ -441,7 +453,7 @@ margin: 0;
   display: block;
   /* position: absolute; */
   // top: 41px;
-  top: 15px;
+  // top: 103.2px;
   left: 165px;
   z-index: 100;
   position: fixed;
