--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300");
+@import url("https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
 * {
   /* remember to define focus styles! */
   /* tables still need 'cellspacing="0"' in the markup */
@@ -149,147 +150,6 @@ nav {
   grid-area: nav;
 }
 
-@media only screen and (max-width: 767px) {
-  .sidenav {
-    height: 240px;
-    width: 170px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    top: -300px;
-    padding-top: 60px;
-    transition: top 0.5s ease;
-  }
-  /* Sidenav menu links */
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-  }
-  /* 
-  .menu >li >ul {
-  color: red
-  }
-
-  .menu {
-  color: blue; 
-  } */
-  .sidenav a:hover {
-    color: #111;
-  }
-  /* .sidenav > menu {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  } */
-  .sidenav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  /* Active class */
-  .sidenav.active {
-    top: 0;
-  }
-  /* Close btn */
-  .sidenav .close {
-    position: absolute;
-    top: -20px;
-    left: -30px;
-    margin-left: auto;
-    font-size: 56px;
-    color: black;
-    font-weight: 900;
-    background-color: white;
-    height: 46px;
-  }
-  /* Icône burger */
-  .burger-icon span {
-    display: block;
-    width: 35px;
-    height: 5px;
-    background-color: black;
-    margin: 6px 0;
-  }
-}
-.close {
-  color: red;
-  display: none;
-}
-
-.menu {
-  flex-direction: column;
-  z-index: 1;
-  position: fixed;
-}
-@media screen and (min-width: 768px) {
-  .menu {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    position: relative;
-  }
-}
-
-.menu ul {
-  display: none;
-}
-
-.menu,
-.menu ul {
-  list-style-type: none;
-  margin: 0px;
-  padding: 0px;
-}
-
-.menu a {
-  display: flex;
-  width: 165px;
-  height: 35px;
-  color: black;
-  border-color: #9ea9d4 #c90052 #c90052 #9ea9d4;
-  border: 0.1vw #fae800 solid;
-  font-weight: bold;
-  font-size: 0.9rem;
-  align-items: center;
-  box-sizing: content-box;
-  text-decoration: none;
-  padding: 3px 0px;
-  justify-content: center;
-  text-align: center;
-}
-.menu a:hover {
-  background-color: #0069b5;
-}
-@media screen and (min-width: 768px) {
-  .menu a {
-    width: 100%;
-  }
-}
-.menu a:hover {
-  background-color: #0069b5;
-}
-
-.menu > li > ul > li > a {
-  padding: 3px 10px;
-}
-@media screen and (min-width: 768px) {
-  .menu > li > ul > li > a {
-    padding: 3px 35px;
-  }
-}
-
-.menu li {
-  width: 100%;
-}
-@media screen and (min-width: 768px) {
-  .menu li {
-    margin: 3px;
-  }
-}
-
 .menu > li {
   display: flex;
   position: relative;
@@ -315,4 +175,130 @@ nav {
 .menu ul li a:hover {
   background-color: #5aabdf;
   border-color: #9ea9d4 #c90052 #c90052 #9ea9d4;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  background: red;
+}
+
+.ie-fix {
+  background: yellow;
+}
+
+.wrapper {
+  background: green;
+  display: flex;
+}
+
+.hamburger-checkbox {
+  position: absolute;
+  opacity: 0;
+}
+
+.hamburger-label {
+  position: absolute;
+  top: 32px;
+  left: 32px;
+  z-index: 1;
+  display: block;
+  width: 42px;
+  height: 42px;
+  font: 42px/42px fontawesome;
+  text-align: center;
+  color: #444;
+  cursor: pointer;
+}
+
+.hamburger-checkbox:checked ~ .hamburger-label:before {
+  content: "\f00d";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: block;
+  width: 42px;
+  height: 42px;
+  font: 42px/42px fontawesome;
+  text-align: center;
+  color: #eee;
+}
+
+.content {
+  flex: 1;
+  padding: 64px 32px;
+  background: #eee;
+  color: #444;
+  box-shadow: 0 0 5px rgb(0, 0, 0);
+  transition: all 0.3s;
+  min-height: 100vh;
+}
+
+.sidebar {
+  overflow: hidden;
+  width: 0;
+  background: #444;
+  color: #eee;
+  transition: all 0.3s;
+  display: flex;
+}
+
+.hamburger-checkbox:checked ~ .sidebar {
+  width: auto;
+  min-height: 100vh;
+  padding-top: 6.5em;
+}
+
+.menu {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+}
+.menu li {
+  display: flex;
+  align-items: center;
+  flex: 1 0 auto;
+  padding: 16px 32px;
+  border-top: 1px solid #2b2b2b;
+}
+.menu li:last-child {
+  border-bottom: 1px solid #2b2b2b;
+}
+
+/* Decorative styles unrelated to the demo */
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+h1 {
+  margin: 32px 0;
+  font-weight: 300;
+  font-size: 200%;
+}
+
+p {
+  margin: 0 0 16px 0;
+}
+
+a {
+  color: #39b54a;
+}
+
+.sous {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  display: none;
+  background-color: #444;
+}
+
+.sous:hover {
+  display: flex;
+  flex-direction: column;
 }/*# sourceMappingURL=style.css.map */
